<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mathematics</string>
    <string name="action_settings">Settings</string>
    
    <string name="isPrime_fragment_introText">Enter Number To figure if it\'s prime</string>
    <string name="isPrime_fragment_CalcBtn_Text">"Is Prime ? "</string>
    <string name="isPrime_fragment_OutputField_Hint">"Will output Result!"</string>
    <string name="isPrime_fragment_InputField_Hint">"Enter Number here"</string>
    
    <!-- Fibonacci fragment Strings -->
	<string name="fibonacci_fragment_gotoBtn_text">Go To N</string>
	<string name="fibonacci_fragment_getNextBtn_text">Get Next Number</string>
	<string name="fibonacci_fragment_resetBtn_text">ResetList</string>
	<string name="fibonacci_fragment_inputField_hint">Enter N</string>
	<string name="fibonacci_fragment_topLeftText_text">No.</string>
	<string name="fibonacci_fragment_topRightText_text">Value</string>
	
</resources>
